Fix white space pre-line css on issues

--- a/src/screens/SprintPage/IssueDisplay/IssueDisplay.css
+++ b/src/screens/SprintPage/IssueDisplay/IssueDisplay.css
@@ -1,6 +1,6 @@
 .NoteText {
   /* overflow-wrap: normal; */
   overflow: hidden;
-  white-space: nowrap;
+  white-space: pre-line;
   /* overflow-wrap: break-word; */
 }
